--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <center><h1> CV Chayma </h1></center>	
 <p> je vais vous presenter mon cv </p>
 <p> test </p>
+<hr> 
+<center> 
+	<a href="www.google.com">google </a>
 </body>
 </html>
