ajout d'un formulaire

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <hr> 
 <center> 
 	<a href="www.google.com">google </a>
-<center> <h1> Je T'aime Salounty Et Merci Beaucoup De M'avoir Aider Ce Soir ♥</h1> </center> 
+<center> <h1> Je T'aime Salounty Et Merci Beaucoup De M'avoir Aider Ce Soir ♥</h1> </center>
+<p> je suis dans la branch formulaire </p>
+<form> 
+nom : <input type="text" name="nom"> <br>  
+prenom : <input type="text" name="prenom"> <br> 
+age : <input type="text" name="age">
+password : <input type="password" name="mdp"><br> 
+<input type="submit" name="btn" value="enregister">
 </body>
 </html>
