J'ai ajoutée Bouton Annuler

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@ prenom : <input type="text" name="prenom"> <br>
 age : <input type="text" name="age">
 password : <input type="password" name="mdp"><br> 
 <input type="submit" name="btn" value="enregister">
+<input type="submit" name="btn" value="Annuler">
 </body>
 </html>
