--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>site de cv </title>
+	<style type="text/css">
+		h1{
+			color: red;
+		}
+	</style>
 </head>
 <body>
 <center><h1> CV Chayma </h1></center>	
