--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>site de cv </title>
 	<style type="text/css">
 		h1{
-			color: red;
+			color: blue;
 		}
 	</style>
 </head>
@@ -24,5 +24,8 @@ age : <input type="text" name="age">
 password : <input type="password" name="mdp"><br> 
 <input type="submit" name="btn" value="enregister">
 <input type="submit" name="btn" value="Annuler">
+<script type="text/javascript">
+	aleert("hello asle"); // c fait expres comme quoi bug 
+</script>
 </body>
 </html>
