J'ai FIXER Le Beug Namour :D

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ password : <input type="password" name="mdp"><br>
 <input type="submit" name="btn" value="enregister">
 <input type="submit" name="btn" value="Annuler">
 <script type="text/javascript">
-	aleert("hello asle"); // c fait expres comme quoi bug 
+	alert("hello aslen"); // c fait expres comme quoi bug 
 </script>
 </body>
 </html>
