--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ password : <input type="password" name="mdp"><br>
 <input type="submit" name="btn" value="enregister">
 <input type="submit" name="btn" value="Annuler">
 <script type="text/javascript">
-	alert("hello aslen"); // c fait expres comme quoi bug 
-</script>
+	alert("hello aslen");
 </body>
 </html>
