--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>site de cv </title>
-<<<<<<< HEAD
 	<style type="text/css">
 		h1{
 			color: blue;
@@ -17,7 +16,7 @@
 <hr> 
 <center> 
 	<a href="www.google.com">google </a>
-<<<<<<< HEAD
+
 <center> <h1> Je T'aime Salounty Et Merci Beaucoup De M'avoir Aider Ce Soir ♥</h1> </center>
 <p> je suis dans la branch formulaire </p>
 <form> 
@@ -29,9 +28,9 @@ password : <input type="password" name="mdp"><br>
 <input type="submit" name="btn" value="Annuler">
 <script type="text/javascript">
 	alert("hello aslen");
-=======
+</script>
 <center> <h1> Je T'aime Salounty Et Merci Beaucoup De M'avoir Aider Ce Soir ♥</h1> </center> 
 <p> test de diff </p>
->>>>>>> master
+
 </body>
 </html>
